<resources>
    <string name="app_name">FootBall App</string>
    <string name="of_the_day">of the day</string>
    <string name="match">Match</string>
    <string name="match_details">Match Details</string>
    <string name="shooting">Shooting</string>
    <string name="attacks">Attacks</string>
    <string name="possession">Possession</string>
    <string name="divider">-</string>
    <string name="cards">Cards</string>
    <string name="corners">Corners</string>
    <string name="home">HOME</string>
    <string name="wins">WINS</string>
    <string name="draw">DRAW</string>
    <string name="away">AWAY</string>
    <string name="top_teams">Top Teams</string>
    <string name="top_competitions">Top Competitions</string>
    <string name="real_madrid">Real Madrid</string>
    <string name="spain_1902">Spain - 1902</string>
    <string name="barcelona">Barcelona</string>
    <string name="spain_1899">Spain - 1899</string>
    <string name="manchester_united">Manchester United</string>
    <string name="england_1878">England - 1878</string>
    <string name="home_menu">Home</string>
    <string name="matches">Matches</string>
    <string name="competitions">Competitions</string>
    <string name="match_status">Match Status</string>
    <string name="home_team">Home Team</string>
    <string name="result_divider">-</string>
    <string name="away_team">Away Team</string>
    <string name="head_to_head">Head To Head</string>
    <string name="total_matches">Total Matches</string>
    <string name="total_goals">Total Goals</string>
    <string name="home_wins">Home Wins</string>
    <string name="draws">Draws</string>
    <string name="away_wins">Away Wins</string>
    <string name="there_are_no_matches_today">There are no matches today</string>
</resources>