<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.watermelon.footballapp.viewModels.MatchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context="com.watermelon.footballapp.ui.fragments.match.MatchFragment">

        <ImageView
            android:id="@+id/image_match_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/stadium_background"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_competition_name_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal16dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="champions league" />


        <ImageView
            android:id="@+id/image_home_team_match"
            android:layout_width="@dimen/team_icon_size_match"
            android:layout_height="@dimen/team_icon_size_match"
            android:layout_margin="@dimen/margin_big32dp"
            android:src="@drawable/laligaexample"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_competition_name_match"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/image_away_team_match"
            android:layout_width="@dimen/team_icon_size_match"
            android:layout_height="@dimen/team_icon_size_match"
            android:layout_margin="@dimen/margin_big32dp"
            android:src="@drawable/laligaexample"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_competition_name_match"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_home_team_name_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/image_home_team_match"
            app:layout_constraintStart_toStartOf="@+id/image_home_team_match"
            app:layout_constraintTop_toBottomOf="@+id/image_home_team_match"
            tools:text="Barcelona" />

        <TextView
            android:id="@+id/text_away_team_name_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/image_away_team_match"
            app:layout_constraintStart_toStartOf="@+id/image_away_team_match"
            app:layout_constraintTop_toBottomOf="@+id/image_away_team_match"
            tools:text="FC Bayern" />

        <TextView
            android:id="@+id/text_home_team_score_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_divider_match"
            app:layout_constraintEnd_toStartOf="@+id/text_divider_match"
            app:layout_constraintTop_toTopOf="@+id/text_divider_match"
            tools:text="2" />

        <TextView
            android:id="@+id/text_away_team_score_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/text_divider_match"
            app:layout_constraintStart_toEndOf="@+id/text_divider_match"
            app:layout_constraintTop_toTopOf="@+id/text_divider_match"
            tools:text="8" />

        <TextView
            android:id="@+id/text_divider_match"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/divider"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="@+id/image_home_team_match"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_home_team_match" />

        <TextView
            android:id="@+id/text_match_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_big32dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/match_details"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_match_background" />

        <TextView
            android:id="@+id/text_shooting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal16dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/shooting"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_match_details" />

        <TextView
            android:id="@+id/text_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/attacks"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_shooting" />

        <TextView
            android:id="@+id/text_possession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/possession"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_attack" />

        <TextView
            android:id="@+id/text_yellow_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/cards"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/text_possession"
            app:layout_constraintStart_toEndOf="@+id/image_yellow_card"
            app:layout_constraintTop_toBottomOf="@+id/text_possession" />

        <ImageView
            android:id="@+id/image_yellow_card"
            android:layout_width="@dimen/yellow_card_icon_size"
            android:layout_height="@dimen/yellow_card_icon_size"
            android:src="@drawable/yellow_card"
            app:layout_constraintBottom_toBottomOf="@+id/text_yellow_cards"
            app:layout_constraintEnd_toStartOf="@+id/text_yellow_cards"
            app:layout_constraintStart_toStartOf="@+id/text_possession"
            app:layout_constraintTop_toTopOf="@+id/text_yellow_cards"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_corners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/corners"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_yellow_cards" />

        <TextView
            android:id="@+id/text_home_team_shooting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_shooting"
            app:layout_constraintEnd_toStartOf="@+id/text_shooting"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="8" />

        <TextView
            android:id="@+id/text_away_team_shooting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_shooting"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/text_shooting"
            tools:text="12" />

        <TextView
            android:id="@+id/text_home_team_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_attack"

            app:layout_constraintEnd_toEndOf="@+id/text_home_team_shooting"
            tools:text="22" />

        <TextView
            android:id="@+id/text_away_team_attack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_attack"

            app:layout_constraintStart_toStartOf="@+id/text_away_team_shooting"
            tools:text="29" />

        <TextView
            android:id="@+id/text_home_team_possession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_possession"
            app:layout_constraintEnd_toEndOf="@+id/text_home_team_attack"
            tools:text="42" />

        <TextView
            android:id="@+id/text_away_team_possession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_possession"
            app:layout_constraintStart_toStartOf="@+id/text_away_team_attack"
            tools:text="58" />

        <TextView
            android:id="@+id/text_home_team_yellow_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_yellow_cards"
            app:layout_constraintEnd_toEndOf="@+id/text_home_team_possession"
            tools:text="3" />

        <TextView
            android:id="@+id/text_away_team_yellow_cards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_yellow_cards"
            app:layout_constraintStart_toStartOf="@+id/text_away_team_possession"
            tools:text="5" />

        <TextView
            android:id="@+id/text_home_team_corners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_corners"
            app:layout_constraintEnd_toEndOf="@+id/text_home_team_yellow_cards"
            tools:text="8" />

        <TextView
            android:id="@+id/text_away_team_corners"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintBaseline_toBaselineOf="@id/text_corners"
            app:layout_constraintStart_toStartOf="@+id/text_away_team_yellow_cards"
            tools:text="7" />


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="Other Matches"
            android:layout_marginTop="@dimen/margin_huge40dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_corners" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal16dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:listitem="@layout/item_match" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>